@@ -1,3 +1,9 @@
+2012-08-04  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-arglists.lisp (test-print-arglist): bind
+	*print-right-margin* to 1000 instead of NIL, because the default
+	value on ABCL is less than the length of the tested arglist.
+
 2012-05-23  Christophe Rhodes  <csr21@cantab.net>
 
 	* swank-media.lisp: add provide.
